Add some more features
Now possible to set maximim brightness level
Minimal and maximim brighness level now can be set in percents not
nominal units
Fixed some bugs

--- a/autobright.conf
+++ b/autobright.conf
@@ -9,7 +9,16 @@ VIDEO_DEV="/dev/video0"
 BACKLIGHT_TYPE="auto"
 
 # Minimal brightness level
-MIN=85
+#MIN=
+# Minimal brightness level in percents of maximim possible brightness for backlight device
+MIN_PERCENT=5
+# Avoid using MIN and MIN_PERCENT at the same time to avoid undefined behaivour
+
+# Maxium brightness level in nominal units of backlight device
+#MAX=
+# Maxium brightness level in percents of maximim possible brightness for backlight device
+MAX_PERCENT=100
+# Avoid using MAX and MAX_PERCENT at the same time to avoid undefined behaivour
 
 # Count of steps of smooth brightness change (higher - smoother)
 STEPS=50
