Add battery saving options

--- a/autobright.conf
+++ b/autobright.conf
@@ -11,7 +11,7 @@ BACKLIGHT_TYPE="auto"
 # Minimal brightness level
 #MIN=
 # Minimal brightness level in percents of maximim possible brightness for backlight device
-MIN_PERCENT=5
+MIN_PERCENT=7
 # Avoid using MIN and MIN_PERCENT at the same time to avoid undefined behaivour
 
 # Maxium brightness level in nominal units of backlight device
@@ -46,3 +46,25 @@ CORRECTION="crt"
 # Defines the shape of correction curve
 # Usually it is between 0.3 - 0.5
 CRT_GAMMA=0.45
+
+# Battery settings
+
+# Switch to economical settings when running on battery (1 - switch, 0 - do not switch)
+ECO_MODE=1
+
+# Options is only for ECO_MODE=1
+POWER_SUPPLY_CLASS_PATH="/sys/class/power_supply"
+
+# Name of AC adapter (check /sys/class/power_supply directory)
+AC_ADAPTER="AC"
+
+# Addititonal delay between measures on battery
+PAUSE_BAT=3
+
+# Same as MIN and MIN_PERCENT, but applied on battery power
+#MIN_BAT=7
+MIN_PERCENT_BAT=7
+
+# Same as MAX and MAX_PERCENT, but applied on battery power
+#MAX_BAT=
+MAX_PERCENT_BAT=95
